# SortFilterProxyModel

./: CMakeLists.txt  SortFilterProxyModel.pri  SortFilterProxyModel.pro  SortFilterProxyModelPlugin.h  qmldir  qqmlsortfilterproxymodel.cpp  qqmlsortfilterproxymodel.h
filters/: alloffilter.h  anyoffilter.h  containsfilter.cpp  containsfilter.h  expressionfilter.h  filter.h  filtercontainer.h  indexfilter.h  rangefilter.h  regexpfilter.h  rolefilter.h  valuefilter.h
proxyroles/: StaticRole.cpp  expressionrole.h  filterrole.h  joinrole.h  proxyrole.h  regexprole.h  staticRole.h  staticrole.h  switchrole.h
sorters/: rolesorter.h  sorter.h  sortersqmltypes.cpp  stringsorter.h
